# LLMSwarm

./: .gitignore  CMakeLists.txt  Doxyfile  ThirdPartyNotice.md  logger.cpp  logger.hpp  main.cpp  utils.cpp  utils.hpp
DroneSwarmInterface/: droneSwarmInterface.py  droneSwarmInterfaceServer.py
InteractionClient/LLMSwarm/: UpgradeLog.htm
InteractionClient/LLMSwarm/Assets/: Boundary.cs  Client.cs  ColorChanger.cs  DeletableWaypoint.cs  Drone.cs  DroneSwarm.cs  DroneTarget.cs  FrozenRigidbodyInteractable.cs  Protocol.cs  STT.asset  SimulatedButton.cs  Snapper.cs  SpawnTrigger.cs  Spawner.cs  StickyLine.cs  TTS.asset  VisibleGrid.cs  WallGrabTransformer.cs  Waypoint.cs
InteractionClient/LLMSwarm/Assets/Drones/: BorderDot.prefab  BorderDotMaterial.mat  CF_2_1.blend  CF_2_1.blend1  Drone.prefab  DroneAnimator.controller  DronePosTargetConnector.prefab  DronePositionMarker.prefab  DroneTargetMarker.prefab  DroneTracker.prefab  DroneWaypoint.prefab  HaloMaterial.mat  PositionMarkerMaterial.mat  PreviewMaterial.mat  PreviewWaypointAnimationController.controller  Propeller.anim  PropellerCW.anim  TargetMaterial.mat  WaypointConnector.prefab  WaypointMaterial.mat  XAxisMaterial.mat  ZAxisMaterial.mat  cf.fbx  propeller ccw Default sldprt_001.controller  propeller cw Default sldprt_001 1.controller  waypoint_wireframe.fbx
InteractionClient/LLMSwarm/Assets/MRTemplateAssets/Scripts/: FadeMaterial.cs
InteractionClient/LLMSwarm/Assets/Oculus/Voice/Resources/: ConduitManifest-25c08e6c-59a4-43d7-9931-c17b5268450a.json  ConduitManifest-6c20d089-409c-46a6-b53f-1fd641235969.json
InteractionClient/LLMSwarm/Assets/Plugins/Android/: AndroidManifest.xml
InteractionClient/LLMSwarm/Assets/Resources/: OpenAIConfiguration.asset
InteractionClient/LLMSwarm/Assets/Samples/XR Interaction Toolkit/3.0.3/Starter Assets/: XRI Default Input Actions.inputactions
InteractionClient/LLMSwarm/Assets/Samples/XR Interaction Toolkit/3.0.3/Starter Assets/Prefabs/: XR Origin (XR Rig).prefab
InteractionClient/LLMSwarm/Assets/Scenes/: SampleScene.unity
InteractionClient/LLMSwarm/Assets/XR/Settings/: Open XR Package Settings.asset
InteractionClient/LLMSwarm/ProjectSettings/: EditorBuildSettings.asset  ProjectSettings.asset  wit.config
Test/: CBSPresentation.cpp  CBSTest.cpp  ProtocolTest.cpp
Test/ARTestServer/: main.cpp
Test/CBSSwap/: main.cpp
Test/CombinedRealDroneTest/: main.cpp
Test/CombinedTest/: main.cpp
Test/DroneSwarmInterfaceClientTest/: DroneSwarmInterfaceTestServer.cpp  DroneSwarmInterfaceTestServer.hpp  main.cpp
Test/InteractionInterfaceServerTest/: InteractionInterfaceTestClient.cpp  InteractionInterfaceTestClient.hpp  main.cpp
Test/RealDroneTest/: main.cpp
graph/: Doxyfile  graph.cpp  graph.hpp
graph/MAPF/: mapf.cpp  mapf.hpp
graph/MAPF/CBS/: CBS.cpp  CBS.hpp  ConstraintTree.cpp  ConstraintTree.hpp
layer0/: CommonProtocol.cpp  CommonProtocol.hpp  position.cpp  position.hpp
layer0/DroneSwarmInterface/: DroneSwarmInterfaceClient.cpp  DroneSwarmInterfaceClient.hpp
layer0/GeometryModule/: GeometryModule.cpp  GeometryModule.hpp
layer0/InteractionInterface/: InteractionServer.cpp  InteractionServer.hpp
layer1/SwarmOperationHandler/: SwarmOperationHandler.cpp  SwarmOperationHandler.hpp
network/: client.cpp  client.hpp  protocol.cpp  protocol.hpp  server.cpp  server.hpp
